# json-select-transform

./: .gitignore  LICENSE  README.md  hie.yaml  json-select-transform.cabal  stack.yaml
.github/workflows/: haskell.yml
src/Data/: JSON.hs
src/Data/JSON/: Select.hs  SelectTransform.hs
