cabal-version:       >=1.10
name:                json-select-transform
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          alejandro.serrano@47deg.com
-- copyright:
category:            Text, Web, JSON
build-type:          Simple

library
  exposed-modules:
    Data.JSON
    Data.JSON.Select
  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    base >= 4.12 && < 5,
    text,
    unordered-containers,
    validation-selective,
    vector
  hs-source-dirs:   src
  default-language: Haskell2010
